--- a/GPOLabs.vcxproj.filters
+++ b/GPOLabs.vcxproj.filters
@@ -276,4 +276,12 @@
       <Filter>Файлы заголовков\Lab3</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="Lab3\Lab3_2.png">
+      <Filter>Файлы ресурсов</Filter>
+    </Image>
+    <Image Include="Lab3\Lab3_1.png">
+      <Filter>Файлы ресурсов</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
